syntax = "proto3";

package service;
option go_package="./pb";

service Like {
  rpc ThumbUp(ThumbUpRequest) returns (ThumbUpResponse);
  rpc IsThumbUp(IsThumbUpRequest) returns (IsThumbUpResponse);
}

message ThumbUpRequest {
  string bizId = 1; // 业务id
  int64 objId = 2; // 点赞对象id
  int64 userId  = 3; // 用户id
  int32 likeType = 4; // 类型
}

message ThumbUpResponse {
  string bizId = 1; // 业务id
  int64 objId = 2; // 点赞对象id
  int64 likeNum = 3; // 点赞数
  int64 dislikeNum = 4; // 点踩数
}

message IsThumbUpRequest {
  string bizId = 1; // 业务id
  int64 targetId = 2; // 点赞对象id
  int64 userId  = 3; // 用户id
}

message IsThumbUpResponse {
  map<int64, UserThumbUp> userThumbUps = 1;
}

message UserThumbUp {
  int64 userId = 1;
  int64 ThumbUpTime = 2;
  int32 likeType = 3; // 类型
}

// cd application/like/rpc
// goctl rpc protoc ./like.proto --go_out=. --go-grpc_out=. --zrpc_out=./